# MediaPlayer

./: .clangd  CMakeLists.txt
.github/workflows/: build.yml  release.yml
include/cppcompat/: cppstr.c  cppstr.h
include/dynarray/: dynarray.h
include/libcutils/: hook.h  memory.h  string.h
include/libspng/: spng.c
include/lightbase/: mem.h
include/mediaplayer/: command.h  config_handler.h  dirlist.h  event_handler.h  file_utils.h  logger.h  music_player.h  path.h  plugin.h  process_png.h  video_player.h
include/mediaplayer/mc/: actor.h  block.h  level.h  network.h  player.h  position.h  structs.h
include/nbsparser/: nbsparser.c  nbsparser.h
include/vector/: vector.c  vector.h
include/xiziya_r/misc/: xr_dynamic_array.h
src/: command.c  config_handler.c  dirlist.c  event_handler.c  file_utils.c  logger.c  music_player.c  path.c  plugin.c  process_png.c  video_player.c
src/dynarray/: dynarray.c
src/mc/: actor.c  block.c  level.c  network.c  player.c
src/xiziya_r/misc/: xr_dynamic_array.c
tools/: convert.c
